--- a/client/package.json
+++ b/client/package.json
@@ -15,13 +15,15 @@
         "@types/react": "^17.0.37",
         "@types/react-dom": "^17.0.11",
         "@types/react-redux": "^7.1.23",
+        "@types/redux-logger": "^3.0.9",
         "axios": "^0.25.0",
+        "dotenv": "^16.0.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-redux": "^7.2.6",
         "react-router-dom": "^6.2.2",
         "react-scripts": "5.0.0",
-        "redux": "^4.1.2",
+        "redux-logger": "^3.0.6",
         "redux-saga": "^1.1.3",
         "tabler-icons-react": "^1.41.0",
         "typescript": "^4.5.4",
