--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,8 @@
         "dotenv": "^16.0.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-error-boundary": "^3.1.4",
+        "react-hook-form": "^7.29.0",
         "react-redux": "^7.2.6",
         "react-router-dom": "^6.2.2",
         "react-scripts": "5.0.0",
